fix: 좋아요 캐싱 기능 재적용